Issue #3160332 by rkoller: Toolbar gets hidden underneath the thead element of the permissions page

--- a/styles/components/_table.scss
+++ b/styles/components/_table.scss
@@ -4,6 +4,7 @@
 }
 
 table.sticky-header {
+  z-index: 97;
   left: auto !important;
   background: transparent;
 
